# rust-raylib-hotreload-example

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  main.js  main.rs  raylib.js
game/: Cargo.toml  Cargo.toml~  game.rs
plug/: plug.rs
src/: main.rs
