[package]
name = "hotreload-raylib-wasm-template"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
web = ["raylib-wasm/web"]
native = ["raylib-wasm/native"]

[dependencies]
libloading = "0.8.3"
game = { path = "game" }
raylib-wasm = { version = "0.0.6", default-features = false }
# raylib-wasm = { path = "raylib-wasm", default-features = false }