[package]
name = "hotreload-raylib-wasm-template"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
web = ["raylib-wasm/web", "game/web"]
native = ["raylib-wasm/native", "game/native"]

[dependencies]
libloading = "0.8.3"
game = { path = "game" }
raylib-wasm = { version = "0.0.13", default-features = false }
# raylib-wasm = { path = "raylib-wasm", default-features = false }
