[package]
name = "game"
version = "0.1.0"
edition = "2021"

[features]
web = ["raylib-wasm/web"]
native = ["raylib-wasm/native"]

[dependencies]
raylib-wasm = { version = "0.0.17", default-features = false }
# raylib-wasm = { path = "../raylib-wasm", default-features = false }

[lib]
path = "game.rs"
crate-type = ["cdylib", "lib"]
